--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title></title>
-    <link rel="stylesheet" href="/css/style.css">
-    <script src="/js/app.js" defer></script>
+    <link rel="stylesheet" href="css/style.css">
+    <script src="js/app.js" defer></script>
 </head>
 
 <body>
@@ -20,7 +20,7 @@
             <div class="entrada header_logo">
                 <header>
                     <div class="logo">
-                        <img src="/assets/Logo.png" alt="logo a">
+                        <img src="assets/Logo.png" alt="logo a">
                     </div>
                 </header>
             </div>
@@ -36,7 +36,7 @@
 
                 <!-- El texto pequeño antes de los botones -->
                 <div class="texto_envio">
-                    <img src="/assets/bi_exclamation-circle-fill.png">
+                    <img src="assets/bi_exclamation-circle-fill.png">
                     <p class="instrucciones_envio">
                         Letras minusculas y sin acento
                     </p>
@@ -64,7 +64,7 @@
             <div class="texto">
 
                 <!-- La imagen -->
-                <img class="imagen" src="/assets/Muñeco.png" alt="niño sentado" id="img_src">
+                <img class="imagen" src="assets/Muñeco.png" alt="niño sentado" id="img_src">
 
                 <h3 id="texto">
                     Ningún mensaje fue encontrado
