Se corrige ortografía

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                         Encriptar
                     </button>
                     <button class="boton2" onclick="desencriptar()">
-                        Desencritptar
+                        Desencriptar
                     </button>
                 </div>
 
